--- a/package.yml
+++ b/package.yml
@@ -5,3 +5,6 @@ packages:
   SnapKit:
     url: https://github.com/SnapKit/SnapKit
     from: 5.0.1
+  RxSwift:
+    url: https://github.com/ReactiveX/RxSwift
+    from: 5.1
